--- a/source/Drey.DebugRunner/Drey.DebugRunner.csproj
+++ b/source/Drey.DebugRunner/Drey.DebugRunner.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6403704C-14D9-4069-AD3D-8EEEF95F499C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{4EAC3258-A641-48F7-9E80-0C99D6DD2729}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Drey</RootNamespace>
-    <AssemblyName>Drey</AssemblyName>
+    <RootNamespace>Drey.DebugRunner</RootNamespace>
+    <AssemblyName>Drey.DebugRunner</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,7 +34,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,16 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppConfigApplicationSettings.cs" />
-    <Compile Include="AppConfigConnectionStrings.cs" />
-    <Compile Include="Horde.cs" />
-    <Compile Include="ApplicationHostNutConfiguration.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Drey.Nut\Drey.Nut.csproj">
-      <Project>{c47ec8a2-f67d-46a7-80de-8c3e48d0b80b}</Project>
-      <Name>Drey.Nut</Name>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Drey\Drey.csproj">
+      <Project>{6403704c-14d9-4069-ad3d-8eeef95f499c}</Project>
+      <Name>Drey</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
