--- a/source/Drey.DebugRunner/App.config
+++ b/source/Drey.DebugRunner/App.config
@@ -3,8 +3,9 @@
   <appSettings>
     <clear />
     <add key="horde.directory" value="~/../../../Drey.Configuration/bin/Debug/"/>
+    <add key="drey.configuration.consoleport" value="8080" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
 </configuration>
