--- a/source/Drey.Configuration.DomainModel/Drey.Configuration.DomainModel.csproj
+++ b/source/Drey.Configuration.DomainModel/Drey.Configuration.DomainModel.csproj
@@ -4,13 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C47EC8A2-F67D-46A7-80DE-8C3E48D0B80B}</ProjectGuid>
+    <ProjectGuid>{09A35155-2F39-4ECE-9813-7E8AA8DF36E8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Drey.Nut</RootNamespace>
-    <AssemblyName>Drey.Nut</AssemblyName>
+    <RootNamespace>Drey.Configuration.DomainModel</RootNamespace>
+    <AssemblyName>Drey.Configuration.DomainModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,20 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrackingAttribute.cs" />
-    <Compile Include="IApplicationSettings.cs" />
-    <Compile Include="IConnectionStrings.cs" />
-    <Compile Include="INutConfiguration.cs" />
-    <Compile Include="IShell.cs" />
+    <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy.cs" />
-    <Compile Include="Shell.cs" />
-    <Compile Include="ShellEventArgs.cs" />
-    <Compile Include="ShellFactory.cs" />
-    <Compile Include="ShellStartOptions.cs" />
-    <Compile Include="StartupProxy.cs" />
+    <Compile Include="UploadOptions.cs" />
+    <Compile Include="UploadReferenceInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
