--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Drey</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,18 +49,31 @@
     <Compile Include="AppConfigConnectionStrings.cs" />
     <Compile Include="HordeServiceControl.cs" />
     <Compile Include="ApplicationHostNutConfiguration.cs" />
+    <Compile Include="Nut\CrackingAttribute.cs" />
+    <Compile Include="Nut\IApplicationSettings.cs" />
+    <Compile Include="Nut\IConnectionStrings.cs" />
+    <Compile Include="Nut\INutConfiguration.cs" />
+    <Compile Include="Nut\IShell.cs" />
+    <Compile Include="Nut\Proxy.cs" />
+    <Compile Include="Nut\ServerAuthenticationTypes.cs" />
+    <Compile Include="Nut\Shell.cs" />
+    <Compile Include="Nut\ShellEventArgs.cs" />
+    <Compile Include="Nut\ShellFactory.cs" />
+    <Compile Include="Nut\ShellStartOptions.cs" />
+    <Compile Include="Nut\StartupProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Drey.Nut\Drey.Nut.csproj">
-      <Project>{c47ec8a2-f67d-46a7-80de-8c3e48d0b80b}</Project>
-      <Name>Drey.Nut</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
