--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DreyConstants.cs" />
     <Compile Include="HordeServiceControl.cs" />
     <Compile Include="ApplicationHostNutConfiguration.cs" />
+    <Compile Include="IHandle.cs" />
     <Compile Include="Nut\CrackingAttribute.cs" />
     <Compile Include="Nut\IApplicationSettings.cs" />
     <Compile Include="Nut\IConnectionStrings.cs" />
@@ -59,6 +60,9 @@
     <Compile Include="Nut\ShellFactory.cs" />
     <Compile Include="Nut\ShellStartOptions.cs" />
     <Compile Include="Nut\StartupProxy.cs" />
+    <Compile Include="PackageEventBus.cs" />
+    <Compile Include="PackageEvents\Load.cs" />
+    <Compile Include="PackageEvents\Shutdown.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PathUtilities.cs" />
   </ItemGroup>
