--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -57,6 +57,11 @@
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Conventions\EmbeddedStaticContentConventionBuilder.cs" />
+    <Compile Include="DataModel\DataModelBase.cs" />
+    <Compile Include="DataModel\IEntity.cs" />
+    <Compile Include="DataModel\PackageConnectionString.cs" />
+    <Compile Include="DataModel\RegisteredPackage.cs" />
+    <Compile Include="DataModel\PackageSetting.cs" />
     <Compile Include="Modules\FeedsModule.cs" />
     <Compile Include="Modules\HomeModule.cs" />
     <Compile Include="Modules\ServerAuthenticationModule.cs" />
@@ -72,6 +77,7 @@
     <EmbeddedResource Include="fonts\glyphicons-halflings-regular.woff" />
     <EmbeddedResource Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="app.config" />
+    <None Include="Drey.Configuration.nuspec" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Views\Home\index.sshtml" />
     <EmbeddedResource Include="Scripts\jquery-2.1.4.min.map" />
@@ -97,6 +103,10 @@
       <Project>{6403704c-14d9-4069-ad3d-8eeef95f499c}</Project>
       <Name>Drey</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastructure\ConfigurationManagement\" />
+    <Folder Include="Infrastructure\IoC\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\..\packages\System.Data.SQLite.Core.1.0.97.0\build\net451\System.Data.SQLite.Core.targets')" />
