--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -53,15 +53,17 @@
     <Compile Include="Nut\IConnectionStrings.cs" />
     <Compile Include="Nut\INutConfiguration.cs" />
     <Compile Include="Nut\IShell.cs" />
-    <Compile Include="Nut\Proxy.cs" />
+    <Compile Include="Nut\ISupportShutdown.cs" />
+    <Compile Include="Nut\DiscoverStartupDllProxy.cs" />
     <Compile Include="Nut\ServerAuthenticationTypes.cs" />
     <Compile Include="Nut\Shell.cs" />
-    <Compile Include="Nut\ShellEventArgs.cs" />
     <Compile Include="Nut\ShellFactory.cs" />
     <Compile Include="Nut\ShellStartOptions.cs" />
     <Compile Include="Nut\StartupProxy.cs" />
     <Compile Include="PackageEventBus.cs" />
+    <Compile Include="PackageEvents\Disposed.cs" />
     <Compile Include="PackageEvents\Load.cs" />
+    <Compile Include="PackageEvents\Loaded.cs" />
     <Compile Include="PackageEvents\Shutdown.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PathUtilities.cs" />
