--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -45,18 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel\DataModelBase.cs" />
-    <Compile Include="DataModel\IEntity.cs" />
-    <Compile Include="Models\NutDetailsPmo.cs" />
-    <Compile Include="Models\NutInfoPmo.cs" />
+    <Compile Include="Models\PackageDetails.cs" />
+    <Compile Include="Models\PackageInfo.cs" />
     <Compile Include="Modules\PackageModule.cs" />
     <Compile Include="Modules\well-known\PackagesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IPackageStore.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
