--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -45,12 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\PackageDetails.cs" />
-    <Compile Include="Models\PackageInfo.cs" />
-    <Compile Include="Modules\PackageModule.cs" />
-    <Compile Include="Modules\well-known\PackagesModule.cs" />
+    <Compile Include="Models\Package.cs" />
+    <Compile Include="Models\Release.cs" />
+    <Compile Include="Modules\well-known\ReleasesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IPackageStore.cs" />
+    <Compile Include="Services\IPackageService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
