Reorganized samples into thier own Top-Level folder.

--- a/samples/Samples.AppOne/Samples.AppOne.csproj
+++ b/samples/Samples.AppOne/Samples.AppOne.csproj
@@ -40,7 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Drey\Drey.csproj">
+    <ProjectReference Include="..\..\source\Drey\Drey.csproj">
       <Project>{6403704c-14d9-4069-ad3d-8eeef95f499c}</Project>
       <Name>Drey</Name>
     </ProjectReference>
