--- a/source/Drey.Client/packages.config
+++ b/source/Drey.Client/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Mono.Options" version="1.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
 </packages>
