--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Models\Package.cs" />
     <Compile Include="Models\Release.cs" />
+    <Compile Include="Modules\well-known\PackagesModule.cs" />
     <Compile Include="Modules\well-known\ReleasesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IPackageService.cs" />
