Drey Client can list releases for a given package.

--- a/source/Drey.Client/Drey.Client.csproj
+++ b/source/Drey.Client/Drey.Client.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Commands\ListPackagesCommand.cs" />
     <Compile Include="Commands\PackageCommand.cs" />
     <Compile Include="Commands\PushCommand.cs" />
+    <Compile Include="Commands\ListReleasesCommand.cs" />
     <Compile Include="Mono.Options\Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
