--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -45,11 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FileDownload.cs" />
     <Compile Include="Models\Package.cs" />
     <Compile Include="Models\Release.cs" />
     <Compile Include="Modules\well-known\PackagesModule.cs" />
     <Compile Include="Modules\well-known\ReleasesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FilesytemFileService.cs" />
+    <Compile Include="Services\IFileService.cs" />
     <Compile Include="Services\IPackageService.cs" />
   </ItemGroup>
   <ItemGroup />
