Refactored the service bits from the storage bits.

--- a/samples/Samples.Server.Services.InMemory/Samples.Server.Services.InMemory.csproj
+++ b/samples/Samples.Server.Services.InMemory/Samples.Server.Services.InMemory.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PackageService.cs" />
+    <Compile Include="PackageStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Files.Designer.cs">
       <DependentUpon>Files.resx</DependentUpon>
