--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>Drey.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <OutputPath>..\..\horde\drey.configuration\0.0.0.0\</OutputPath>
+    <OutputPath>..\..\horde\drey.configuration-$(Version)\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NuGetPackageImportStamp>d4f755e0</NuGetPackageImportStamp>
