--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -4,7 +4,10 @@
   <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="FluentMigrator" version="1.6.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Nancy" version="1.2.0" targetFramework="net451" />
   <package id="Nancy.Hosting.Self" version="1.2.0" targetFramework="net451" />
+  <package id="Nancy.Validation.DataAnnotations" version="1.2.0" targetFramework="net451" />
+  <package id="Nancy.Viewengines.Razor" version="1.2.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net451" />
 </packages>
